fix: ajusta toList