@@ -4,6 +4,7 @@ import org.junit.Before;
 import org.junit.Test;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.*;
 
@@ -28,7 +29,7 @@ public class FunctionalTests {
         List<Ingresso> ingressosVip = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.VIP)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosVip = ingressosVip.size();
         int totalIngressos = show.getTotalIngressos();
         int minVip = (int) Math.ceil(totalIngressos * 0.20);
@@ -43,7 +44,7 @@ public class FunctionalTests {
         List<Ingresso> ingressosMeia = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.MEIA_ENTRADA)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosMeia = ingressosMeia.size();
         int totalIngressos = show.getTotalIngressos();
         int qntMeiaExpected = (int) Math.ceil(totalIngressos * 0.10);
@@ -56,7 +57,7 @@ public class FunctionalTests {
         List<Ingresso> ingressosNormal = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.NORMAL)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosNormal = ingressosNormal.size();
         int totalIngressos = show.getTotalIngressos();
         int qntVipExpected = (int) Math.floor(totalIngressos * 0.25);
@@ -238,7 +239,7 @@ public class FunctionalTests {
                 .stream()
                 .filter(e -> e.getTipo() == tipoIngresso &&
                         e.getStatus() == StatusIngresso.DISPONIVEL)
-                .toList();
+                .collect(Collectors.toList());
 
         ingressos.forEach(ingresso -> ingresso.setStatus(StatusIngresso.VENDIDO));
     }
