@@ -7,6 +7,7 @@ import org.junit.jupiter.api.BeforeEach;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.*;
 import static org.junit.Assert.assertEquals;
@@ -39,7 +40,7 @@ public class FunctionalTestsJUnit5 {
                 .stream()
                 .filter(e -> e.getTipo() == tipoIngresso &&
                         e.getStatus() == StatusIngresso.DISPONIVEL)
-                .toList();
+                .collect(Collectors.toList());
 
         ingressos.forEach(ingresso -> ingresso.setStatus(StatusIngresso.VENDIDO));
     }
@@ -50,7 +51,7 @@ public class FunctionalTestsJUnit5 {
         List<Ingresso> ingressosVip = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.VIP)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosVip = ingressosVip.size();
         int totalIngressos = show.getTotalIngressos();
         int minVip = (int) Math.ceil(totalIngressos * 0.20);
@@ -68,7 +69,7 @@ public class FunctionalTestsJUnit5 {
         List<Ingresso> ingressosMeia = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.MEIA_ENTRADA)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosMeia = ingressosMeia.size();
         int totalIngressos = show.getTotalIngressos();
         int qntMeiaExpected = (int) Math.ceil(totalIngressos * 0.10);
@@ -81,7 +82,7 @@ public class FunctionalTestsJUnit5 {
         List<Ingresso> ingressosNormal = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.NORMAL)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosNormal = ingressosNormal.size();
         int totalIngressos = show.getTotalIngressos();
         int qntVipExpected = (int) Math.floor(totalIngressos * 0.25);
