@@ -8,6 +8,7 @@ import org.junit.jupiter.api.DisplayName;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.*;
 import static org.junit.Assert.assertEquals;
@@ -41,7 +42,7 @@ public class ShowTestJUnit5 {
         List<Ingresso> ingressosVip = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.VIP)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosVip = ingressosVip.size();
         int totalIngressos = show.getTotalIngressos();
         int minVip = (int) Math.ceil(totalIngressos * 0.20);
@@ -60,7 +61,7 @@ public class ShowTestJUnit5 {
         List<Ingresso> ingressosMeia = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.MEIA_ENTRADA)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosMeia = ingressosMeia.size();
         int totalIngressos = show.getTotalIngressos();
         int qntMeiaExpected = (int) Math.ceil(totalIngressos * 0.10);
@@ -74,7 +75,7 @@ public class ShowTestJUnit5 {
         List<Ingresso> ingressosNormal = lote.getIngressos()
                 .stream()
                 .filter(e -> e.getTipo() == TipoIngresso.NORMAL)
-                .toList().stream().toList();
+                .collect(Collectors.toList());
         int totalIngressosNormal = ingressosNormal.size();
         int totalIngressos = show.getTotalIngressos();
         int qntVipExpected = (int) Math.floor(totalIngressos * 0.25);
